# aip_cpp_sdk

./: CMakeLists.txt  README.md
include/: body_analysis.h  content_censor.h  face.h  image_censor.h  image_classify.h  image_process.h  image_search.h  kg.h  machine_translation.h  nlp.h  ocr.h  speech.h  video_censor.h  voice_censor.h
src/: demo.cpp
